<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HerzelnActivity$DummySectionFragment" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <!-- Spieler 1 -->

            <TextView
                android:id="@+id/p1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player1" />

            <!-- Spieler 2 -->

            <TextView
                android:id="@+id/p2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player2" />

            <!-- Spieler 3 -->

            <TextView
                android:id="@+id/p3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player3" />

            <!-- Spieler 4 -->

            <TextView
                android:id="@+id/p4"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/player4" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF0099CC" />
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:stretchColumns="*" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="4dip"
            android:background="#FF0099CC" />

        <TableRow
            android:id="@+id/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <Button
                android:id="@+id/newgame"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@+string/Button1" />
            
            <Button
                android:id="@+id/newround"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@+string/Button2" />
        </TableRow>
    </TableLayout>

</RelativeLayout>